<resources>
    <string name="app_name">Tungguin Designer</string>
    <string name="input_email">Masukan Email</string>
    <string name="input_password">Password</string>
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
    <item name="path_password_eye_mask_visible" type="id"/>
    <item name="path_password_eye_mask_strike_through" type="id"/>

    <string name="dashboard">Dashboard</string>
    <string name="chat">Chat</string>
    <string name="histori">Histori</string>
    <string name="profil">Profil</string>
    <string name="nama_designer">Nama</string>
    <string name="email_designer">Email</string>
    <string name="nomor_designer">Nomor Telepon</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="txt_not_found_data">Tidak Ada Data</string>
    <string name="teksLogout">Logout</string>
    <string name="time">0 Sec</string>
    <string name="txt_ex_order">Penawaran sudah berakhir, tunggu penawaran berikutnya.</string>
    <string name="txt_total_order">Total Order : 0 Order</string>
    <string name="txt_this_week_order">Order Minggu ini : 0</string>
    <string name="txt_today_order">Order Hari ini : 0</string>
    <string name="total_fee">Total Fee: Rp 0,-</string>
    <string name="none">-</string>
    <string name="login">Login</string>
    <string name="text_login_activity">Silakan login dengan akun anda</string>
    <string name="text_no_have_account">Belum punya akun?</string>
    <string name="text_register_now">Daftar disini</string>
    <string name="rp_0">Rp. 0,-</string>
    <string name="detail_order">Detail Order</string>
    <string name="informasi_order">Informasi Order</string>
    <string name="id_order">ID Order</string>
    <string name="waktu_pemesanan">Waktu Pemesanan</string>
    <string name="status">Status</string>
    <string name="total_service_fees">(Total + Service Fees)</string>
    <string name="name">Nama</string>
    <string name="total">Total</string>
    <string name="order_detail_product">Detail Produk yang Dipesan</string>
    <string name="contact_via_whatsapp">Hubungi Via WhatsApp</string>
    <string name="desain">Desain</string>
    <string name="konsep_desain">Konsep Desain</string>
    <string name="detail_design">Detail Desain</string>
    <string name="preferensi_desain">Preferensi Desain</string>
    <string name="harga">Harga</string>
    <string name="testimoni">Testimoni</string>
    <string name="testimoni_designer">Testimoni Designer:</string>
    <string name="testimoni_aplikasi">Testimoni Aplikasi:</string>
    <string name="tip">Tip:</string>
    <string name="design_result">Hasil Desain</string>
    <string name="download_file_information">Silakan unduh filenya pada link berikut ini:</string>
    <string name="customer">Customer</string>
</resources>