<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

    <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#FFDADADA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_detail_order"/>

    <TextView
            android:id="@+id/listFormattedID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/none"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/listFormattedStatus"
            android:text="@string/none"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/order_round_no_hover"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingEnd="9dp"
            android:paddingStart="9dp"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/listFormattedAmount"
            android:text="@string/rp_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/listFormattedStatus"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/listFormattedDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/none"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/listFormattedID"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/listFormattedStatus"/>

    <Button
            android:id="@+id/btn_detail_order"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:text="@string/detail_order"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/listFormattedDate"
            app:layout_constraintStart_toStartOf="parent" android:background="@drawable/btn_gray_round_hover"
            android:padding="12dp" android:textAllCaps="false" android:textSize="13sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>