<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.ProfileFragment"
        android:id="@+id/profile_layout"
        android:background="#FFFFFF">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:elevation="6dp"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Profil Designer"
                tools:targetApi="lollipop"
                android:theme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/appbar">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/detail_order_scrollview">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            app:civ_border_color="@color/colorPrimary"
                            app:civ_border_width="2dp"
                            android:elevation="6dp"
                            android:src="@drawable/circle_profil"
                            tools:targetApi="lollipop"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>

                    <TextView
                            android:text="Kode: "
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/id_designer"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            tools:ignore="HardcodedText"
                            android:textColor="@color/azure.primary_dark"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/profile_image"/>
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                            app:srcCompat="@drawable/ic_camera_alt_24dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:id="@+id/btn_takePhoto"
                            app:fabSize="mini" android:layout_marginEnd="8dp"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:backgroundTint="@color/colorAccent" app:layout_constraintHorizontal_bias="0.64"
                            app:layout_constraintVertical_bias="0.81" android:focusable="true"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_card"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="3dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp">

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="8dp">

                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center">

                            <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/ic_person_abu_32dp"
                                    android:id="@+id/img_profile"
                                    android:layout_weight="8"
                                    android:layout_marginEnd="3dp"
                                    android:layout_marginRight="3dp"
                                    tools:ignore="ContentDescription"/>

                            <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/nameLayout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:counterMaxLength="25"
                                    app:counterEnabled="false"
                                    app:passwordToggleDrawable="@drawable/icon_selector">

                                <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/my_name"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:hint="@string/nama_designer"
                                        android:enabled="false"
                                        android:textSize="16sp"
                                        android:maxLength="25"
                                        android:inputType="text"
                                        android:textColor="#FF4D4D4D"/>

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>
                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center" android:layout_marginTop="4dp">

                            <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/ic_email_abu_32dp"
                                    android:id="@+id/img_email"
                                    android:layout_weight="8"
                                    android:layout_marginEnd="3dp"
                                    android:layout_marginRight="3dp"
                                    tools:ignore="ContentDescription"/>

                            <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/email_layout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:passwordToggleDrawable="@drawable/icon_selector">

                                <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/my_email"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:hint="@string/email_designer"
                                        android:enabled="false"
                                        android:textSize="16sp"
                                        android:inputType="textEmailAddress"
                                        android:textColor="#FF4D4D4D"/>

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:layout_marginTop="4dp">

                            <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/ic_local_phone_abu_32dp"
                                    android:id="@+id/img_number"
                                    android:layout_weight="8"
                                    android:layout_marginEnd="3dp"
                                    android:layout_marginRight="3dp"
                                    tools:ignore="ContentDescription"/>

                            <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/nomorLayout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:passwordToggleDrawable="@drawable/icon_selector">

                                <com.google.android.material.textfield.TextInputEditText
                                        android:id="@+id/phone_number"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:hint="@string/nomor_designer"
                                        android:enabled="false"
                                        android:textSize="16sp"
                                        android:inputType="phone"
                                        android:textColor="#FF4D4D4D"/>

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:layout_marginTop="8dp">
                    <Button
                            android:text="@string/edit_profil"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnEditProfil"
                            android:textAllCaps="false"
                            android:elevation="6dp"
                            tools:targetApi="lollipop"
                            app:layout_constraintTop_toBottomOf="@+id/profile_card"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_weight="1" style="@style/Widget.AppCompat.Button"
                            android:background="@drawable/menu_round_button"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold" android:layout_margin="4dp"/>

                    <Button
                            android:text="@string/ubah_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnEditPass"
                            android:textAllCaps="false"
                            android:elevation="6dp"
                            tools:targetApi="lollipop"
                            app:layout_constraintTop_toBottomOf="@+id/profile_card"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_weight="1" style="@style/Widget.AppCompat.Button"
                            android:background="@drawable/menu_round_button"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:layout_marginEnd="4dp"
                            android:layout_margin="4dp"
                            android:layout_marginRight="4dp"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>